[project]
name = "rag-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "azure-servicebus>=7.14.2",
    "chromadb>=1.0.16",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "pandas>=2.3.1",
    "uvicorn>=0.35.0",
]
